Mobile responsive edits

--- a/index.html
+++ b/index.html
@@ -8,51 +8,50 @@
     <title>Space hack</title>
 </head>
 <body>
-    <main>
-        <h2 class="main">Far away</h2>
-        <figure>
+    <main class="main">
+        <h2 class="main__slogan--black-purple">Far away</h2>
+        <figure class="image-box--planet">
             <img src="images/planet.svg" alt="">
         </figure>
-        <figure>
+        <figure class="image-box--astronaut">
             <img src="images/astronaut.svg" alt="">
         </figure>
-        <figure>
+        <figure class="image-box--gun">
             <img src="images/gun.svg" alt="">
         </figure>
-        <figure>
+        <figure class="image-box--ship">
             <img src="images/ship.svg" alt="">
         </figure>
-        <div></div>
-        <!-- <img src="images/astronaut.jpg" alt=""> -->
-        <figure>
+        <img class="image-astronaut" src="images/astronaut.jpg" alt="">
+        <figure class="image-box--station">
             <img src="images/station.svg" alt="">
         </figure>
-        <figure>
+        <figure class="image-box--space">
             <img src="images/space.svg" alt="">
         </figure>
-        <h2>Far far away</h2>
-        <figure>
+        <h2 class="main__slogan--damp-purple">Far far away</h2>
+        <figure class="image-box--constellation">
             <img src="images/constellation.svg" alt="">
         </figure>
     </main>
-    <footer>
-        <h4>Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
+    <footer class="footer">
+        <h4 class="footer__text--bold">Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
             accusantium doloremque laudantiumm doloremque laudantium</h4>
-        <section>
-            <h3>Space place</h3>
-            <p>Nemo enim ipsam remo enim ipsam</p>
+        <section class="footer__wrapper">
+            <h3 class="footer__title">Space place</h3>
+            <p class="footer__text">Nemo enim ipsam remo enim ipsam</p>
         </section>
         <section>
-            <h3>Space place</h3>
-            <p>Nemo enim ipsam remo enim ipsam</p>
+            <h3 class="footer__title">Space place</h3>
+            <p class="footer__text">Nemo enim ipsam remo enim ipsam</p>
         </section>
         <section>
-            <h3>Space place</h3>
-            <p>Nemo enim ipsam remo enim ipsam</p>
+            <h3 class="footer__title">Space place</h3>
+            <p class="footer__text">Nemo enim ipsam remo enim ipsam</p>
         </section>
         <section>
-            <h3>Space place</h3>
-            <p>Nemo enim ipsam remo enim ipsam</p>
+            <h3 class="footer__title">Space place</h3>
+            <p class="footer__text">Nemo enim ipsam remo enim ipsam</p>
         </section>
     </footer>
 </body>
